Fixed occasional bug where the page was too wide.
This caused a horizontal scroll bar to appear on some pages.

--- a/templates/css/styles.sass
+++ b/templates/css/styles.sass
@@ -133,8 +133,8 @@ td pre
     display: block
     padding: 3px
     position: absolute
-    margin-top: -10px
-    margin-left: -15px
+    margin-top: -1.3em
+    right: 15px
     opacity: 0
     
   .no
